# practice-valuation

./: .gitignore  PROJECT_STATE.md  README.md
data-collector/: .env.example  README.md  config.yaml  main.py  requirements.txt
desktop/: .dockerignore  Dockerfile  components.json  docker-compose.yml  index.html  (+3 more)
desktop/src-tauri/migration/: Cargo.toml
desktop/src-tauri/migration/src/: lib.rs  m20260709_010051_create_valuation_and_bazin_inputs.rs  m20260709_152010_create_graham_inputs.rs  m20260709_153134_create_gordon_inputs.rs  m20260709_154525_create_dcf_inputs.rs  m20260709_155420_create_banks_inputs.rs  m20260709_160307_create_rnav_inputs.rs  m20260709_160929_create_projected_ceiling_inputs.rs  m20260709_212958_create_crypto_score_tables.rs  m20260709_232211_create_stock_quotes.rs  m20260710_115333_create_stock_fundamentals_and_dividends.rs  m20260710_132548_create_stock_dcf_fundamentals.rs  m20260710_134142_add_tax_rate_to_stock_dcf_fundamentals.rs  m20260710_220000_rename_avg_dividend5y_column.rs  m20260711_093000_create_alert_rule_table.rs  m20260711_171445_create_alert_event_table.rs  m20260712_220000_add_payout_to_stock_fundamentals.rs  m20260712_223000_create_rim_inputs.rs  m20260715_215835_create_stock_technicals.rs  m20260715_215836_create_stock_notes.rs  m20260715_230504_add_revenue_to_stock_dcf_fundamentals.rs  m20260715_232005_create_stock_dividend_payments.rs  m20260716_005530_create_ai_api_key.rs  m20260721_120000_create_ai_conversation_and_message.rs  m20260721_140000_add_token_usage_to_ai_message.rs  m20260721_150000_create_ai_valuation_proposal.rs
(+122 files in other folders)
