[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
chrono = "0.4"

[dependencies.sea-orm-migration]
version = "1.1.0"
features = [
  "runtime-tokio-rustls",  # ASYNC_RUNTIME — mesmo runtime usado no resto do projeto (o Tauri já roda sobre tokio)
  "sqlx-sqlite",           # DATABASE_DRIVER — SQLite, mesma escolha do crate principal
]
